# justiceai

./: .env.example  .env.production  .gitignore  .replit  ACCESSIBILITY_WCAG.md  ADVANCED_OCR_GUIDE.md  CICD_PIPELINE_GUIDE.md  COMPLIANCE_MOROCCO.md  DEPLOYMENT.md  OPERATIONAL_MANUAL.md  README.md  SECURITY_AND_ARCHITECTURE_AUDIT.md  WCAG_2.1_AA_COMPLIANCE_REPORT.md  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json  pytest.ini  replit.md  run_tests.sh
attached_assets/: Pasted--An-lisis-Completo-del-Proyecto-JusticeAI-Sistema-Judicial-Digital-de-Marruecos-Tarik-has-desar-1761756461367_1761756461367.txt  Pasted--JusticeAI-Sistema-Judicial-Digital-Marruecos-An-lisis-Profesional-Debuggeo-Completo--1760398697628_1760398697629.txt  README_1761750926581.md  (+8 more)
backend/: .coveragerc  .env.test  .flake8  .pre-commit-config.yaml  CODE_QUALITY.md  Dockerfile  PRODUCTION_READY_SUMMARY.md  TESTING.md  coverage.xml  format.sh  init_db.py  lint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-minimal.txt  requirements-ocr-advanced.txt  requirements.txt  run_performance_tests.sh  run_tests.sh  test.db
backend/app/: __init__.py  backend-app-config.py  backend-app-database.py  backend-app-hsm-production.py  backend-app-main.py  backend-app-models.py  backend-app-ocr-processor.py  backend-app-routes-auth.py  config.py  config_production.py  database.py  main.py  models.py
backend/app/auth/: auth.py  jwt.py  two_factor.py  two_factor_standalone.py  utils.py
backend/app/core/: __init__.py  cache.py
backend/app/middleware/: rate_limit.py
backend/app/monitoring/: __init__.py  performance_monitor.py
backend/app/routes/: __init__.py  audit.py  auth.py  cases.py  documents.py  schemas.py  search.py  signatures.py  users.py
backend/app/services/: __init__.py  advanced_ocr_service.py  case_service.py  elasticsearch_service.py  notification_service.py  ocr_service.py
backend/app/tasks/: __init__.py  celery_app.py  ocr_tasks.py
backend/migrations/: 001_add_ocr_fields.sql
backend/scripts/: run_tests.sh
backend/tests/: __init__.py  conftest.py
backend/tests/api/: __init__.py  test_api_auth.py  test_api_cases_rbac.py  test_api_documents_rbac.py  test_api_users_rbac.py
backend/tests/integration/: test_database.py  test_elasticsearch.py  test_redis.py
backend/tests/performance/: README.md  __init__.py  locustfile.py  run_load_tests.sh
backend/tests/security/: __init__.py  test_rate_limiting.py  test_security.py  test_security_rbac.py
backend/tests/unit/: test_auth.py  test_cases.py  test_documents.py  test_users.py
scripts/: README.md  (+3 more)
(+41 files in other folders)
